extended/advanced/solutions/troubleshooting-master/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: super-app-frontend
spec:
  parentRefs:
  - name: super-app-gateway
    namespace: super-app-frontend
  hostnames:
  - "super-app.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend
      port: 80
